--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -133,9 +133,9 @@ img {
  }
  @media all and (max-width: 479px) { 
     .container{
-        width: 450px;
+        width: 100%;
         margin: 0 auto;
-        padding: 0 30px;
+        padding: 0 35px;
     }
     .row {
         display: block;
