correzzione widht tablet

--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -134,7 +134,7 @@ img {
 
  @media all and (max-width: 779px) { 
      .container{
-         width: 750px;
+         width: 100%;
          margin: 0 auto;
      }
  }
