aumentata grandezza testo in smartphone

--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -161,6 +161,9 @@ img {
     .col{
         padding: 0;
     }
+    .text{
+font-size: 22px;
+    }
 
     /* lesson section */
     .lessons .col {
