testo oiu grande a tutti i paragrafi (smartphone)

--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -161,8 +161,8 @@ img {
     .col{
         padding: 0;
     }
-    .text{
-font-size: 22px;
+    p{
+        font-size: 22px;
     }
 
     /* lesson section */
